remove unused DatasetVar data class, not used
