# biosim_server/workflows/verify/__init__.py
@@ -1,5 +1,5 @@
 from biosim_server.workflows.verify.activities import SimulationRunInfo, GenerateStatisticsInput, \
-    GenerateStatisticsOutput, DatasetVar, RunData, ComparisonStatistics, generate_statistics
+    GenerateStatisticsOutput, RunData, ComparisonStatistics, generate_statistics
 from biosim_server.workflows.verify.omex_verify_workflow import OmexVerifyWorkflow, OmexVerifyWorkflowInput, \
     OmexVerifyWorkflowStatus, OmexVerifyWorkflowOutput
 from biosim_server.workflows.verify.runs_verify_workflow import RunsVerifyWorkflow, RunsVerifyWorkflowInput, \
@@ -10,7 +10,6 @@ __all__ = [
     "SimulationRunInfo",
     "GenerateStatisticsInput",
     "GenerateStatisticsOutput",
-    "DatasetVar",
     "RunData",
     "ComparisonStatistics",
     "generate_statistics",
